feat: add missing information to release

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
     </script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
 
 
     <!--
